vlib/v/checker/tests/nil.vv
fn main() {
    unsafe {
        value := nil
        println(value)
    }
}
